--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
     </footer>
   </section>
 
-  <script src='../vue2.js'></script>
+  <script src='./vue2.js'></script>
   <script src='./dynamics.js'></script>
   <script src='./indexRui.js'></script>
   <script src='./indexTodo.js'></script>
