--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 
   </style>
   <!-- 引入 jQuery 库 -->
-<script src="http://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
 
 <!-- 引入 jQuery Mobile 库 -->
 <!-- <script src="http://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> -->
