--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     }
 
     .toggle-all:before {
-      content: '❯';
+      content: ' ';
       font-size: 22px;
       color: #e6e6e6;
       padding: 10px 27px 10px 27px;
