--- a/index.html
+++ b/index.html
@@ -771,22 +771,22 @@
       <div class="contain">
                 <div class='block block1'>
                     <span>春</span>
-                    <img src="./images/spring.svg" alt="" class='svg_img'>
+                    <img src="./images/spring.svgz" alt="" class='svg_img'>
                     <img src="./images/springone.png" alt="" class='smallpic smallpic1'>
                 </div>
                 <div class='block block2'>
                     <span>夏</span>
-                    <img src="./images/summer.svg" alt="" class='svg_img' style="transform: translateY(-38px);">
+                    <img src="./images/summer.svgz" alt="" class='svg_img' style="transform: translateY(-38px);">
                     <img src="./images/summer.png" alt="" class='smallpic smallpic2'>
                 </div>
                 <div class='block block3'>
                     <span>秋</span>
-                    <img src="./images/full.svg" alt="" class='svg_img'> 
+                    <img src="./images/full.svgz" alt="" class='svg_img'> 
                     <img src="./images/fullone.png" alt="" class='smallpic smallpic3'> 
                 </div>
                 <div class='block block4'>
                     <span>冬</span>
-                    <img src="./images/winter.svg" alt="" class='svg_img'>
+                    <img src="./images/winter.svgz" alt="" class='svg_img'>
                     <img src="./images/snowone.png" alt="" class='smallpic smallpic4'>
                     <img src="./images/snowone.png" alt="" class='smallpic smallpic5'>
                 </div>
