--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
     .svg_img{
         transform: translateY(-36px);
         transition: 1s;
+        width: 150px;
     }
     .svg_img:hover{
        opacity: .5;
@@ -771,22 +772,22 @@
       <div class="contain">
                 <div class='block block1'>
                     <span>春</span>
-                    <img src="./images/spring.svgz" alt="" class='svg_img'>
+                    <img src="./images/spring.png" alt="" class='svg_img'>
                     <img src="./images/springone.png" alt="" class='smallpic smallpic1'>
                 </div>
                 <div class='block block2'>
                     <span>夏</span>
-                    <img src="./images/summer.svgz" alt="" class='svg_img' style="transform: translateY(-38px);">
+                    <img src="./images/summerA.png" alt="" class='svg_img' style="transform: translateY(-38px);">
                     <img src="./images/summer.png" alt="" class='smallpic smallpic2'>
                 </div>
                 <div class='block block3'>
                     <span>秋</span>
-                    <img src="./images/full.svgz" alt="" class='svg_img'> 
+                    <img src="./images/full.png" alt="" class='svg_img'> 
                     <img src="./images/fullone.png" alt="" class='smallpic smallpic3'> 
                 </div>
                 <div class='block block4'>
                     <span>冬</span>
-                    <img src="./images/winter.svgz" alt="" class='svg_img'>
+                    <img src="./images/winter.png" alt="" class='svg_img'>
                     <img src="./images/snowone.png" alt="" class='smallpic smallpic4'>
                     <img src="./images/snowone.png" alt="" class='smallpic smallpic5'>
                 </div>
